--- a/style.css
+++ b/style.css
@@ -2,10 +2,18 @@
   box-sizing: border-box;
   -moz-box-sizing: border-box; }
 
+.example-appear {
+  opacity: 0.01; }
+
+.example-appear.example-appear-active {
+  opacity: 1;
+  transition: opacity .5s ease-in; }
+
 body {
   font-family: Arial;
   font-size: 14px;
-  overflow-x: hidden; }
+  overflow-x: hidden;
+  background: url(assets/philadelphia-skyline-night-1.jpg) top left/100% 100% no-repeat fixed padding-box content-box #212121; }
 
 body > div > span,
 body > div > h1 {
@@ -49,7 +57,7 @@ button {
   transition: transform ease 250ms; }
 
 .menu > div.left {
-  background: #212121;
+  background: #FFFFFF;
   left: -250px; }
 
 .menu > div.visible.left {
@@ -83,3 +91,11 @@ button {
 
 .menu > div > .menu-item:hover {
   color: #F0F0F0; }
+
+.navbar {
+  background-color: transparent;
+  background: transparent;
+  border-color: transparent; }
+
+.navbar li {
+  color: #000; }
